--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Twoforyou_BOTCScript"
         tools:targetApi="31"
-        android:name=".BotcScriptMakerApp">
+        android:name=".BotcScriptMakerApp"
+        android:requestLegacyExternalStorage="true">
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
